package it.polimi.ingsw.VirtualView.ModelObservers;

public interface VirtualViewObserver {
    void update();
}
